--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "fastapi[standard]>=0.115.12",
-    "uvicorn<=0.20.0"
+    "redis[hiredis]>=6.0.0",
+    "uvicorn<=0.20.0",
 ]
 
