--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "fastapi[standard]>=0.115.12",
     "redis[hiredis]>=6.0.0",
+    "typer>=0.15.2",
     "uvicorn<=0.20.0",
 ]
 
