--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,6 +78,14 @@ select = [
     "C4", # flake8-comprehensions (C4)
     "T10", # flake8-debugger (T10)
     "EM", # flake8-errmsg (EM)
+    "ICN", # flake8-import-conventions (ICN)
+    "LOG", # flake8-logging (LOG)
+    "G", # flake8-logging-format (G)
+    "INP", # flake8-no-pep420 (INP)
+    "PIE", # flake8-pie (PIE)
+    "PT", # flake8-pytest-style (PT)
+    "Q", # flake8-quotes (Q)
+    "RET", # flake8-return (RET)
 
 ]
 ignore = []
