--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,36 +69,64 @@ target-version = "py313"
 select = [
     "FAST", # FastAPI (FAST)
     "ANN", # flake8-annotations (ANN)
+    # "ASYNC", # flake8-async (ASYNC)
     "I", # isort (I)
     "F", # Pyflakes (F)
     "S", # flake8-bandit (S)
     "BLE", # flake8-blind-except (BLE)
     "FBT", # flake8-boolean-trap (FBT)
     "B", # flake8-bugbear (B)
+    "COM", # flake8-commas (COM)
     "C4", # flake8-comprehensions (C4)
+    "DTZ", # flake8-datetinez (DTZ)
     "T10", # flake8-debugger (T10)
     "EM", # flake8-errmsg (EM)
+    "ISC", #flake8-implict-str-concat (ISC)
     "ICN", # flake8-import-conventions (ICN)
     "LOG", # flake8-logging (LOG)
     "G", # flake8-logging-format (G)
     "INP", # flake8-no-pep420 (INP)
     "PIE", # flake8-pie (PIE)
-    "PT", # flake8-pytest-style (PT)
+    "T20", # flake8-print (T20)
+    "PYI", # flake8-pyi (PYI)
+#    "PT", # flake8-pytest-style (PT)
     "Q", # flake8-quotes (Q)
+    "RSE", # flake8-raise (RSE)
     "RET", # flake8-return (RET)
+    "SLF", # flake8-self(SLF)
     "SIM", # flake8-simplify (SIM)
-    "TCH", # flake8-type-checking (TCH)
+    "SLOT", # flake8 -slots (SLOT)
+    "TC", # flake8-type-checking (TCH)
     "ARG", # flake8-unused-arguments (ARG)
     "PTH", # flake8-use-pathlib (PTH)
+    "FLY", # flynt (FLY)
     "C90", # mccabe (C90)
     "PD", # pandas-vet (PD)
     "N", # pep8-naming (N)
-    "PL", # pylint (PL)
+    "PERF", # Perflint (PERF)
+    "E", # pycodestyle Error (E)
+    "W", # pycodestyle (W)
+#    "DOC", # pydocrint (DOC)
+#     "D", # pycodestyle (D)
+    "F", # Pyflakes (F)
+    "PGH", # pygrep-hooks
+    "PLC", # pylint Convention
+    "PLE", # pylint Error
+    "PLR", # pylint refactor
+    "PLW", # pylint warning
+    "UP", #pyupgrade
     "FURB", # refurb (FURB)
     "TRY", # tryceratops (TRY)
+    "RUF", # Ruff-specific rules
 
 ]
-ignore = []
+ignore = [
+    "S101", # S101 assert Use of assert detected
+    "RUF001", # unicode string
+    "RUF002", # unicode docstring
+    "RUF003", # unicode comment
+    "TC006", # runtime-cast-value
+]
 
 # Allow fix for all enabled rules (when `--fix`) is provided.
 fixable = ["ALL"]
