--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,16 +1,26 @@
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.3.0
-    hooks:
-    -   id: check-yaml
-    -   id: end-of-file-fixer
-    -   id: trailing-whitespace
-    -   id: check-added-large-files
-    -   id: check-json
-    -   id: check-toml
-    -   id: detect-private-key
-    -   id: name-tests-test
--   repo: https://github.com/psf/black
-    rev: 25.1.0
-    hooks:
-    -   id: black
+    -   repo: https://github.com/pre-commit/pre-commit-hooks
+        rev: v2.3.0
+        hooks:
+        -   id: check-yaml
+        -   id: end-of-file-fixer
+        -   id: trailing-whitespace
+        -   id: check-added-large-files
+        -   id: check-json
+        -   id: check-toml
+        -   id: detect-private-key
+        -   id: name-tests-test
+
+    -   repo: https://github.com/psf/black
+        rev: 25.1.0
+        hooks:
+        -   id: black
+
+    - repo: https://github.com/astral-sh/ruff-pre-commit
+      rev: v0.11.12
+      hooks:
+        # Run the linter.
+        - id: ruff-check
+          args:
+            - --fix
+#            - --unsafe-fixes
