--- a/pyproject.toml
+++ b/pyproject.toml
@@ -129,6 +129,9 @@ ignore = [
     "TC006", # runtime-cast-value
 ]
 
+[tool.ruff.lint.per-file-ignores]
+"url-shortener/testing/**/*.py" = ["S311"]
+
 # Allow fix for all enabled rules (when `--fix`) is provided.
 fixable = ["ALL"]
 unfixable = []
