Добавил маркер для API тестов

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -143,8 +143,15 @@ unfixable = []
 
 [tool.pytest.ini_options]
 minversion = 8.3 # минимальаня версия pytest
-addopts = "-ra" # Отображается сводка по пропущенным/упавшим тестам
+addopts = "-ra --strict-markers"
+# -ra Отображается сводка по пропущенным/упавшим тестам
+# --strict-markers Строгая проверка названий меток
 
 log_cli = false # Отключите вывод логов в консоль
 log_cli_level = "INFO" # Установите уровень логирования
 console_output_style = "progress" # стиль вывода в консоль
+
+# регистрация меток "название:описание"
+markers = [
+    "apitest:test any http call"
+]
