build(pyproject): add default argument for strict_xfail in pytest

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -155,3 +155,4 @@ console_output_style = "progress" # стиль вывода в консоль
 markers = [
     "apitest:test any http call"
 ]
+xfail_strict = true # если в тесте не указано, то это значение по умолчанию
