--- a/.github/workflows/python-checks.yaml
+++ b/.github/workflows/python-checks.yaml
@@ -8,11 +8,24 @@ on:
     branches:
       - master
     paths:
+      - ".github/workflows/**"
       - "url-shortener/**"
 
 jobs:
-  lint-job:
+  run-black:
     runs-on: ubuntu-latest
     steps:
-      - name: PlaceholderGH Actions step
-        run: echo "Hello world"
+      - name: Checkout code
+        uses: actions/checkout@v5
+      - uses: actions/setup-python@v5
+        with:
+          python-version-file: '.python-version'
+
+      - name: Install Black
+        run: |
+          python -m pip install --upgrade pip
+          pip install "black==25.1.0"
+
+      - name: Black
+        run: |
+          black --check --diff ./
