build(pyproject): upgrade and fix uv version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,10 @@ dependencies = [
     "uvicorn<=0.20.0",
 ]
 
+# uv settings
+[tool.uv]
+required-version = "~=0.9.7"
+
 [dependency-groups]
 dev = [
     "coverage>=7.9.2",
