ci(python-checks): add "uv run"

--- a/.github/workflows/python-checks.yaml
+++ b/.github/workflows/python-checks.yaml
@@ -45,4 +45,4 @@ jobs:
       - name: Install the project
         run: uv sync --locked --all-extras --dev
       - name: run mypy
-        run: mypy url-shortener
+        run: uv run mypy url-shortener
