--- a/.github/workflows/python-checks.yaml
+++ b/.github/workflows/python-checks.yaml
@@ -29,7 +29,7 @@ jobs:
       - name: Black
         run: |
           black --check --diff ./
-  list-dependencies:
+  run-mypy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code for UV
@@ -44,5 +44,5 @@ jobs:
           enable-cache: true
       - name: Install the project
         run: uv sync --locked --all-extras --dev
-      - name: list dependencies
-        run: uv tree
+      - name: run mypy
+        run: uv run mypy url-shortener
