--- a/.github/workflows/python-checks.yaml
+++ b/.github/workflows/python-checks.yaml
@@ -30,6 +30,14 @@ jobs:
         run: |
           black --check --diff ./
 
+      - name: Install Black⬛
+        run: |
+          python -m pip install --upgrade pip
+          pip install "black==25.1.0"
+      - name: Black # проверяем блеком
+        run: |
+          black --check --diff ./
+
       - name: Setup UV # установка UV
         uses: astral-sh/setup-uv@v5
         with:
