--- a/.github/workflows/python-checks.yaml
+++ b/.github/workflows/python-checks.yaml
@@ -30,14 +30,6 @@ jobs:
         run: |
           black --check --diff ./
 
-      - name: Install Black⬛
-        run: |
-          python -m pip install --upgrade pip
-          pip install "black==25.1.0"
-      - name: Black # проверяем блеком
-        run: |
-          black --check --diff ./
-
       - name: Setup UV # установка UV
         uses: astral-sh/setup-uv@v5
         with:
@@ -58,3 +50,26 @@ jobs:
 
       - name: run mypy # запуск mypy через UV
         run: uv run mypy url-shortener
+
+  run-tests:
+    runs-on: ubuntu-latest
+    needs:
+      - run-check
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v5
+      - uses: actions/setup-python@v5
+        with:
+          python-version-file: '.python-version'
+
+      - name: Setup UV
+        uses: astral-sh/setup-uv@v5
+        with:
+          pyproject-file: 'pyproject.toml'
+          enable-cache: true
+      - name: Install the project
+        run: uv sync --locked --all-extras --dev
+      - name: Run python pytest
+        run: uv run pytest
+        env:
+          TESTING: 1
