--- a/.github/workflows/python-checks.yaml
+++ b/.github/workflows/python-checks.yaml
@@ -55,6 +55,16 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - run-check
+    services:
+      redis:
+        image: redis
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 6379:6379
     steps:
       - name: Checkout code
         uses: actions/checkout@v5
@@ -73,3 +83,4 @@ jobs:
         run: uv run pytest
         env:
           TESTING: 1
+          REDIS_PORT: 6379
