--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13.1"
 dependencies = [
     "fastapi[standard]>=0.115.12",
+    "pydantic-settings>=2.12.0",
     "redis[hiredis]>=6.0.0",
     "typer>=0.15.2",
     "uvicorn<=0.20.0",
