--- a/.github/workflows/python-checks.yaml
+++ b/.github/workflows/python-checks.yaml
@@ -16,39 +16,38 @@ jobs:
   run-check:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code # скачиваем код в раннер
+      - name: 1. Checkout code
         uses: actions/checkout@v5
-      - uses: actions/setup-python@v5 # скачиваем питон из кеша гитхаб
-        with:
-          python-version-file: '.python-version' # вот отсюда берем версию питона
 
-      - name: Install Black⬛
+      - name: 2. Download python
+        uses: actions/setup-python@v5
+        with:
+          python-version-file: '.python-version'
+
+      - name: 3. Install Black⬛
         run: |
           python -m pip install --upgrade pip
           pip install "black==25.1.0"
-      - name: Black # проверяем блеком
+      - name: Black
         run: |
           black --check --diff ./
 
-      - name: Setup UV # установка UV
+      - name: 4. Setup UV
         uses: astral-sh/setup-uv@v5
         with:
-          pyproject-file: 'pyproject.toml' # файл с настройками
+          pyproject-file: 'pyproject.toml'
           enable-cache: true
-      - name: Install the project # установка зависимостей
+
+      - name: 5. Install the project
         run: uv sync --locked --all-extras --dev
 
-      - name: Run ruff --dif # запуск ruff c показом ошибок
+      - name: 6. Run ruff --dif
         uses: astral-sh/ruff-action@v3
         with:
           args: 'check --diff'
           version-file: "pyproject.toml"
-      - name: Run ruff # запуск ruff стандарт, чтобы показать что все ок
-        uses: astral-sh/ruff-action@v3
-        with:
-          version-file: "pyproject.toml"
 
-      - name: run mypy # запуск mypy через UV
+      - name: 7. run mypy
         run: uv run mypy url-shortener
 
   run-tests:
@@ -66,25 +65,30 @@ jobs:
         ports:
           - 6379:6379
     steps:
-      - name: Checkout code
+      - name: 1. Checkout code
         uses: actions/checkout@v5
-      - uses: actions/setup-python@v5
+
+      - name: 2. Download python
+        uses: actions/setup-python@v5
         with:
           python-version-file: '.python-version'
 
-      - name: Setup UV
+      - name: 3. Setup UV
         uses: astral-sh/setup-uv@v5
         with:
           pyproject-file: 'pyproject.toml'
           enable-cache: true
-      - name: Install the project
+
+      - name: 4. Install the all depends
         run: uv sync --locked --all-extras --dev
-      - name: Run python pytest
+
+      - name: 5. Run python pytest
         run: uv run pytest url-shortener --cov=url-shortener --cov-report=xml:coverage.xml
         env:
           TESTING: 1
           REDIS_PORT: 6379
-      - name: Upload coverage report to Codecov
+
+      - name: 6. Upload coverage report to Codecov
         uses: codecov/codecov-action@v5
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
