--- a/.github/workflows/python-checks.yaml
+++ b/.github/workflows/python-checks.yaml
@@ -16,38 +16,39 @@ jobs:
   run-check:
     runs-on: ubuntu-latest
     steps:
-      - name: 1. Checkout code
+      - name: Checkout code # скачиваем код в раннер
         uses: actions/checkout@v5
-
-      - name: 2. Download python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5 # скачиваем питон из кеша гитхаб
         with:
-          python-version-file: '.python-version'
+          python-version-file: '.python-version' # вот отсюда берем версию питона
 
-      - name: 3. Install Black⬛
+      - name: Install Black⬛
         run: |
           python -m pip install --upgrade pip
           pip install "black==25.1.0"
-      - name: Black
+      - name: Black # проверяем блеком
         run: |
           black --check --diff ./
 
-      - name: 4. Setup UV
+      - name: Setup UV # установка UV
         uses: astral-sh/setup-uv@v5
         with:
-          pyproject-file: 'pyproject.toml'
+          pyproject-file: 'pyproject.toml' # файл с настройками
           enable-cache: true
-
-      - name: 5. Install the project
+      - name: Install the project # установка зависимостей
         run: uv sync --locked --all-extras --dev
 
-      - name: 6. Run ruff --dif
+      - name: Run ruff --dif # запуск ruff c показом ошибок
         uses: astral-sh/ruff-action@v3
         with:
           args: 'check --diff'
           version-file: "pyproject.toml"
+      - name: Run ruff # запуск ruff стандарт, чтобы показать что все ок
+        uses: astral-sh/ruff-action@v3
+        with:
+          version-file: "pyproject.toml"
 
-      - name: 7. run mypy
+      - name: run mypy # запуск mypy через UV
         run: uv run mypy url-shortener
 
   run-tests:
@@ -65,30 +66,25 @@ jobs:
         ports:
           - 6379:6379
     steps:
-      - name: 1. Checkout code
+      - name: Checkout code
         uses: actions/checkout@v5
-
-      - name: 2. Download python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
           python-version-file: '.python-version'
 
-      - name: 3. Setup UV
+      - name: Setup UV
         uses: astral-sh/setup-uv@v5
         with:
           pyproject-file: 'pyproject.toml'
           enable-cache: true
-
-      - name: 4. Install the all depends
+      - name: Install the project
         run: uv sync --locked --all-extras --dev
-
-      - name: 5. Run python pytest
+      - name: Run python pytest
         run: uv run pytest url-shortener --cov=url-shortener --cov-report=xml:coverage.xml
         env:
           TESTING: 1
           REDIS_PORT: 6379
-
-      - name: 6. Upload coverage report to Codecov
+      - name: Upload coverage report to Codecov
         uses: codecov/codecov-action@v5
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
