--- a/.github/workflows/python-checks.yaml
+++ b/.github/workflows/python-checks.yaml
@@ -13,48 +13,48 @@ on:
 
 jobs:
 
-  run-check:
+  run-code-style-check:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code # скачиваем код в раннер
+      - name: 1. Checkout code
         uses: actions/checkout@v5
-      - uses: actions/setup-python@v5 # скачиваем питон из кеша гитхаб
-        with:
-          python-version-file: '.python-version' # вот отсюда берем версию питона
 
-      - name: Install Black⬛
+      - name: 2. Download python
+        uses: actions/setup-python@v5
+        with:
+          python-version-file: '.python-version'
+
+      - name: 3. Install Black⬛
         run: |
           python -m pip install --upgrade pip
           pip install "black==25.1.0"
-      - name: Black # проверяем блеком
+
+      - name: 4. Black check
         run: |
           black --check --diff ./
 
-      - name: Setup UV # установка UV
+      - name: 5. Setup UV
         uses: astral-sh/setup-uv@v5
         with:
-          pyproject-file: 'pyproject.toml' # файл с настройками
+          pyproject-file: 'pyproject.toml'
           enable-cache: true
-      - name: Install the project # установка зависимостей
+
+      - name: 6. Install the project
         run: uv sync --locked --all-extras --dev
 
-      - name: Run ruff --dif # запуск ruff c показом ошибок
+      - name: 7. Run ruff --dif
         uses: astral-sh/ruff-action@v3
         with:
           args: 'check --diff'
           version-file: "pyproject.toml"
-      - name: Run ruff # запуск ruff стандарт, чтобы показать что все ок
-        uses: astral-sh/ruff-action@v3
-        with:
-          version-file: "pyproject.toml"
 
-      - name: run mypy # запуск mypy через UV
+      - name: 8. run mypy
         run: uv run mypy url-shortener
 
   run-tests:
     runs-on: ubuntu-latest
     needs:
-      - run-check
+      - run-code-style-check
     services:
       redis:
         image: redis
@@ -66,34 +66,56 @@ jobs:
         ports:
           - 6379:6379
     steps:
-      - name: Checkout code
+      - name: 1. Checkout code
         uses: actions/checkout@v5
-      - uses: actions/setup-python@v5
+
+      - name: 2. Download python
+        uses: actions/setup-python@v5
         with:
           python-version-file: '.python-version'
 
-      - name: Setup UV
+      - name: 3. Setup UV
         uses: astral-sh/setup-uv@v5
         with:
           pyproject-file: 'pyproject.toml'
           enable-cache: true
 
-      - name: Install the project
+      - name: 4. Install the project
         run: uv sync --locked --all-extras --dev
 
-      - name: Run python pytest
+      - name: 5. Run python pytest
         run: uv run pytest url-shortener --cov-report=json:coverage.json --cov=url-shortener --cov-report=xml:coverage.xml
         env:
           TESTING: 1
           REDIS_PORT: 6379
 
-      - name: Prepare coverage percentage
+      - name: 6. Upload coverage reports artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-reports
+          path: |
+            coverage.xml
+            coverage.json
+          retention-days: 1
+
+  update-coverage-badge:
+    if: github.ref == 'refs/heads/master'
+    runs-on: ubuntu-latest
+    needs:
+      - run-tests
+    steps:
+      - name: 1. Downloads coverage reports
+        uses: actions/download-artifact@v4
+        with:
+          name: coverage-reports
+
+      - name: 2. Prepare coverage percentage
         run: |
           export EXTRACTED_COVERAGE=$(python -c 'import json;print(json.load(open("coverage.json"))["totals"]["percent_covered_display"])')
           echo "TOTAL_COVERAGE=$EXTRACTED_COVERAGE" >> $GITHUB_ENV
           echo "### Tests coverage: {$EXTRACTED_COVERAGE}%" >> $GITHUB_STEP_SUMMARY
 
-      - name: Update coverage badge
+      - name: 3. Update coverage badge
         uses: schneegans/dynamic-badges-action@v1.7.0
         with:
           auth: ${{ secrets.GIST_TOKEN }}
@@ -105,7 +127,18 @@ jobs:
           maxColorRange: 90
           valColorRange: ${{ env.TOTAL_COVERAGE}}
 
-      - name: Upload coverage report to Codecov
+
+  upload-to-codecov:
+    runs-on: ubuntu-latest
+    needs:
+      - run-tests
+    steps:
+      - name: 1. Downloads coverage reports
+        uses: actions/download-artifact@v4
+        with:
+          name: coverage-reports
+
+      - name: 2. Upload coverage report to Codecov
         uses: codecov/codecov-action@v5
         if: ${{ !github.event.act }}
         with:
