--- a/.github/workflows/python-checks.yaml
+++ b/.github/workflows/python-checks.yaml
@@ -146,3 +146,4 @@ jobs:
           files: coverage.xml
           dry_run: ${{ env.ACT }}
           fail_ci_if_error: 'true'
+          slug: GlebKostousov/fastapi-url-shortener
