--- a/.github/workflows/python-checks.yaml
+++ b/.github/workflows/python-checks.yaml
@@ -53,7 +53,7 @@ jobs:
 
   run-tests:
     runs-on: ubuntu-latest
-    container: node:20-bookworm-slim
+    container: node:20-bookworm
     needs:
       - run-code-style-check
     services:
