--- a/.github/workflows/python-checks.yaml
+++ b/.github/workflows/python-checks.yaml
@@ -53,7 +53,7 @@ jobs:
 
   run-tests:
     runs-on: ubuntu-latest
-    container: node:20-bookworm
+    container: node:20-bookworm-slim
     needs:
       - run-code-style-check
     services:
@@ -69,16 +69,30 @@ jobs:
       - name: 1. Checkout code
         uses: actions/checkout@v5
 
-      - name: 2. Download python
-        uses: actions/setup-python@v5
-        with:
-          python-version-file: '.python-version'
-
+#      - name: 2. Install Python
+#        run: |
+#          PYTHON_VERSION=$(cat .python-version)
+#          apt-get update
+#          apt-get install -y python${PYTHON_VERSION} python${PYTHON_VERSION}-venv python${PYTHON_VERSION}-dev pip
+#          update-alternatives --install /usr/bin/python python /usr/bin/python${PYTHON_VERSION} 1
+#          update-alternatives --install /usr/bin/python3 python3 /usr/bin/python${PYTHON_VERSION} 1
+#
+#      - name: 2.1. Verify Python installation
+#        run: python --version
+#
+#
       - name: 3. Setup UV
-        uses: astral-sh/setup-uv@v5
+        uses: astral-sh/setup-uv@v6
         with:
-          pyproject-file: 'pyproject.toml'
           enable-cache: true
+
+      - name: 3.1 Install python
+#        run: |
+#          PYTHON_VERSION=$(cat .python-version)
+#          uv python install $PYTHON_VERSION
+        run: |
+          uv python install
+          python --version
 
       - name: 4. Install the project
         run: uv sync --locked --all-extras --dev
@@ -87,8 +101,8 @@ jobs:
         run: uv run pytest url-shortener --cov-report=json:coverage.json --cov=url-shortener --cov-report=xml:coverage.xml
         env:
           TESTING: 1
-          URL_SHORTENER__REDIS__CONNECTION__PORT: redis
-          URL_SHORTENER__REDIS__CONNECTION__HOST: 6379
+          URL_SHORTENER__REDIS__CONNECTION__PORT: 6379
+          URL_SHORTENER__REDIS__CONNECTION__HOST: redis
 
 
       - name: 6. Upload coverage reports artifacts
