--- a/.github/workflows/python-checks.yaml
+++ b/.github/workflows/python-checks.yaml
@@ -69,30 +69,15 @@ jobs:
       - name: 1. Checkout code
         uses: actions/checkout@v5
 
-#      - name: 2. Install Python
-#        run: |
-#          PYTHON_VERSION=$(cat .python-version)
-#          apt-get update
-#          apt-get install -y python${PYTHON_VERSION} python${PYTHON_VERSION}-venv python${PYTHON_VERSION}-dev pip
-#          update-alternatives --install /usr/bin/python python /usr/bin/python${PYTHON_VERSION} 1
-#          update-alternatives --install /usr/bin/python3 python3 /usr/bin/python${PYTHON_VERSION} 1
-#
-#      - name: 2.1. Verify Python installation
-#        run: python --version
-#
-#
-      - name: 3. Setup UV
+      - name: 2. Setup UV
         uses: astral-sh/setup-uv@v6
         with:
           enable-cache: true
 
-      - name: 3.1 Install python
-#        run: |
-#          PYTHON_VERSION=$(cat .python-version)
-#          uv python install $PYTHON_VERSION
+      - name: 3 Install python with UV
         run: |
           uv python install --default --preview
-          python --version
+          python --version # для проверки
 
       - name: 4. Install the project
         run: uv sync --locked --all-extras --dev
