--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13.1"
 dependencies = [
     "fastapi[standard]>=0.115.12",
+    "jinja2>=3.1.6",
     "pydantic-settings>=2.12.0",
     "pyyaml>=6.0.2",
     "redis[hiredis]>=6.0.0",
