--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "fastapi[standard]>=0.115.12",
     "jinja2>=3.1.6",
     "pydantic-settings>=2.12.0",
+    "python-multipart>=0.0.20",
     "pyyaml>=6.0.2",
     "redis[hiredis]>=6.0.0",
     "typer>=0.15.2",
